--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 body{
@@ -23,6 +23,7 @@ p, h3{
 
 p{
   font-weight: 300;
+  line-height: 20px;
 }
 
 div ul a{
@@ -49,34 +50,6 @@ li{
 ::-webkit-scrollbar-thumb:hover {
   background: var(--quaternary-color); 
 }
-
-@media (max-width:1000px){
-  nav{
-    padding: 60px 85px
-  }
-}
-
-@media (max-width:600px){
-  nav{
-    padding: 60px 40px
-  }
-}
-
-/* html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-} */
 
 a {
   color: inherit;
@@ -106,8 +79,35 @@ a {
 .carouselArrow{
   width: 40px;
 }
-/* @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+
+h5{
+  font-size: 16px;
+  color: rgb(159, 49, 49);
+  padding-top: 20px
+}
+
+label{
+  color: var(--primary-color);
+  padding: 7px 0px;
+}
+
+@media (max-width:1000px){
+  nav{
+    padding: 60px 85px
   }
-} */
+
+  li{
+    padding-bottom: 30px;
+  }
+}
+
+@media (max-width:600px){
+  nav{
+    padding: 60px 45px
+  }
+
+  #carouselImage{
+    width:86vw;
+    padding: 0
+  }
+}
